[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Fonts/Welbut__.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/Img/Loading/Maps.png" type="Texture" id=2]
[ext_resource path="res://Resources/Theme/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Resources/Fonts/ResourcesFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Settings.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Audio/Misc/menu.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Background"
length = 16.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3777, 301 ), Vector2( -2752, 301 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3777, 301 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 71
outline_size = 1
outline_color = Color( 0.486275, 0.486275, 0.486275, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 3777, 301 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
root_node = NodePath("../..")
anims/Background = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.0712891
anchor_top = 0.0783333
anchor_right = 0.929688
anchor_bottom = 0.38
custom_fonts/font = SubResource( 3 )
text = "Valorant ACE Simulator"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.427734
anchor_top = 0.455
anchor_right = 0.572266
anchor_bottom = 0.703333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start" type="Button" parent="Buttons"]
margin_right = 148.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Start"

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 51.0
margin_right = 148.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"

[node name="Exit" type="Button" parent="Buttons"]
margin_top = 102.0
margin_right = 148.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="Settings" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
